[package]
name = "qmi8658"
version = "0.1.0"
authors = ["Peng <peng89769975@163.com>"]
edition = "2018"

description = "Platform agnostic driver for qmi8658 6-axis IMU"
repository = "https://github.com/apeng2012/qmi8658"
readme = "README.md"
keywords = ["qmi8658", "imu", "embedded"]
license = "MIT"

[dependencies]
embedded-hal = "0.2.4"
libm = "0.2.1"

[dependencies.nalgebra]
default-features = false
version = "0.32"

[dev-dependencies]
i2cdev = "0.5.1"
linux-embedded-hal = "0.3.2"
